--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,13 +46,15 @@
         app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notify_contacts_image_view"
-        app:layout_constraintVertical_bias="0.393">
+        app:layout_constraintVertical_bias="0.393"
+        app:cornerRadius = "20dp">
 
         <Button
             android:id="@+id/change_message_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#000000"
+            app:cornerRadius = "20dp"
             android:text="Change Message" />
 
         <Button
@@ -60,6 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#000000"
+            app:cornerRadius = "20dp"
             android:text="Manage Contacts" />
 
         <Button
@@ -67,6 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#000000"
+            app:cornerRadius = "20dp"
             android:text="Log Out" />
 
     </LinearLayout>
