--- a/app/src/main/res/layout/popup_signup.xml
+++ b/app/src/main/res/layout/popup_signup.xml
@@ -1,57 +1,101 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:orientation="vertical"
     android:gravity="center"
-    android:background="#000000">
+    android:background="#000000"
+    tools:context=".SignupActivity">
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:background="#F1F1F1"
-        android:padding="16dp">
+        android:layout_margin="30dp"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp">
 
-        <EditText
-            android:id="@+id/username_edit_text"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="#C6C6C6"
-            android:hint="Username" />
+            android:orientation="vertical"
+            android:padding="24dp"
+            android:background="#F1F1F1">
 
-        <EditText
-            android:id="@+id/phone_number_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/username_edit_text"
-            android:layout_marginTop="16dp"
-            android:background="#C6C6C6"
-            android:hint="Phone Number" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sign Up"
+                android:textSize="36sp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="#87CEEB"/>
 
-        <EditText
-            android:id="@+id/password_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/phone_number_edit_text"
-            android:layout_marginTop="16dp"
-            android:background="#C6C6C6"
-            android:hint="Password"
-            android:inputType="textPassword" />
+            <EditText
+                android:id="@+id/signup_username"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="40dp"
+                android:background="#C6C6C6"
+                android:hint="Username"
+                android:padding="8dp"
+                android:textColor="@color/black" />
 
-        <Button
-            android:id="@+id/signup_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/password_edit_text"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
-            android:background="#87CEEB"
-            android:onClick="signUp"
-            android:text="Sign Up"
-            android:textColor="#FFFFFF" />
+            <EditText
+                android:id="@+id/signup_email"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="40dp"
+                android:background="#C6C6C6"
+                android:hint="Email"
+                android:padding="8dp"
+                android:textColor="#000000" />
 
-    </RelativeLayout>
-</RelativeLayout>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/signup_phone"
+                android:background="#C6C6C6"
+                android:layout_marginTop="20dp"
+                android:padding="8dp"
+                android:hint="Phone Number"
+                android:textColor="#000000"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/signup_password"
+                android:background="#C6C6C6"
+                android:hint="Password"
+                android:layout_marginTop="20dp"
+                android:padding="8dp"
+                android:inputType="textPassword"
+                android:textColor="#000000"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="Sign Up"
+                android:id="@+id/signup_button"
+                android:textSize="18sp"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="#87CEEB"
+                app:cornerRadius="20dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/loginRedirectText"
+                android:text="Already a user? Login"
+                android:layout_gravity="center"
+                android:padding="8dp"
+                android:layout_marginTop="10dp"
+                android:textColor="#87CEEB"
+                android:textSize="18sp"/>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
