--- a/app/src/main/res/layout/activity_opening_screen.xml
+++ b/app/src/main/res/layout/activity_opening_screen.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:background="#000000">
     <Button
-        android:id="@+id/signingin_button"
+        android:id="@+id/loggingin_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
@@ -16,10 +16,10 @@
         android:onClick="openLoginPopup" />
 
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/signingin_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/signingin_button"
+        android:layout_below="@id/loggingin_button"
         android:layout_centerHorizontal="true"
         android:onClick="openSignPopup"
         android:text="Sign Up" />
